--- a/bibliography.bib
+++ b/bibliography.bib
@@ -5,6 +5,25 @@
 
 
 %% Saved with string encoding Unicode (UTF-8) 
+@article{voyer2019internet,
+  title={Internet Engineering Task Force A. Aguado Internet-Draft Nokia Intended status: Standards Track O. Gonzalez de Dios, Ed. Expires: March 27, 2020 V. Lopez Telefonica},
+  author={Voyer, D and Munoz, L},
+  year={2019}
+}
+
+@techreport{wulitkowski,
+  title={Litkowski, S., Tomotaki, L., and K. Ogaki," YANG Data Model for L3VPN Service Delivery},
+  author={Wu, Q},
+  institution={RFC 8299, DOI 10.17487/RFC8299, January 2018,< https://www. rfc-editor. org~…}
+}
+
+@article{rosen2006rfc,
+  title={RFC 4364-BGP/MPLS IP Virtual Private Networks (VPNs)},
+  author={Rosen, Eric and Rekhter, Yakov},
+  journal={Internet Engineering Task Force (IETF)},
+  year={2006}
+}
+
 @article{choi2018agile,
   title={Agile Management and Interoperability Testing of SDN/NFV-Enriched 5G Core Networks},
   author={Choi, Taesang and Kim, TaeYeon and Tavernier, Wouter and Korvala, Aki and Pajunp{\"a}{\"a}, Jussi},
