--- a/bibliography.bib
+++ b/bibliography.bib
@@ -5,16 +5,46 @@
 
 
 %% Saved with string encoding Unicode (UTF-8) 
+@techreport{bjorklund2016yang,
+  title={The YANG 1.1 data modeling language},
+  author={Bjorklund, Martin},
+  year={2016},
+  institution={RFC 7950, DOI 10.17487/RFC7950, August 2016,< https://www. rfc-editor. org~…}
+}
+
+@article{bierman2017restconf,
+  title={RESTCONF protocol},
+  author={Bierman, Andy and Bjorklund, Martin and Watsen, Kent and Fernando, Rex},
+  journal={IETF RFC 8040},
+  year={2017}
+}
+
+@article{enns2011network,
+  title={Network configuration protocol (NETCONF)},
+  author={Enns, Rob and Bjorklund, Martin and Schoenwaelder, Juergen and Bierman, Andy},
+  year={2011},
+  publisher={RFC 6241}
+}
+
 @article{voyer2019internet,
   title={Internet Engineering Task Force A. Aguado Internet-Draft Nokia Intended status: Standards Track O. Gonzalez de Dios, Ed. Expires: March 27, 2020 V. Lopez Telefonica},
   author={Voyer, D and Munoz, L},
   year={2019}
 }
 
-@techreport{wulitkowski,
-  title={Litkowski, S., Tomotaki, L., and K. Ogaki," YANG Data Model for L3VPN Service Delivery},
-  author={Wu, Q},
-  institution={RFC 8299, DOI 10.17487/RFC8299, January 2018,< https://www. rfc-editor. org~…}
+@misc{rfc8299,
+	series =	{Request for Comments},
+	number =	8299,
+	howpublished =	{RFC 8299},
+	publisher =	{RFC Editor},
+	doi =		{10.17487/RFC8299},
+	url =		{https://rfc-editor.org/rfc/rfc8299.txt},
+        author =	{Qin Wu and Stephane Litkowski and Luis Tomotaki and Kenichi Ogaki},
+	title =		{{YANG Data Model for L3VPN Service Delivery}},
+	pagetotal =	188,
+	year =		2018,
+	month =		jan,
+	abstract =	{This document defines a YANG data model that can be used for communication between customers and network operators and to deliver a Layer 3 provider-provisioned VPN service. This document is limited to BGP PE-based VPNs as described in RFCs 4026, 4110, and 4364. This model is intended to be instantiated at the management system to deliver the overall service. It is not a configuration model to be used directly on network elements. This model provides an abstracted view of the Layer 3 IP VPN service configuration components. It will be up to the management system to take this model as input and use specific configuration models to configure the different network elements to deliver the service. How the configuration of network elements is done is out of scope for this document. This document obsoletes RFC 8049; it replaces the unimplementable module in that RFC with a new module with the same name that is not backward compatible. The changes are a series of small fixes to the YANG module and some clarifications to the text.},
 }
 
 @article{rosen2006rfc,
